--- a/index.html
+++ b/index.html
@@ -302,15 +302,21 @@
 
                                 <div class="form__group u-margin-bottom-medium">
                                     <div class="form__radio-group">
-                                        <input type="radio" class="form__radio-input" id="small" name="size">
-                                        <label for="small" class="form__radio-label">
-                                            <span class="form__radio-button"></span>Small tour group</label>
+                                        <input type="radio" class="form__radio-input" id="regular" name="size">
+                                        <label for="regular" class="form__radio-label">
+                                            <span class="form__radio-button"></span>Regular Clean</label>
                                     </div>
 
                                     <div class="form__radio-group">
-                                        <input type="radio" class="form__radio-input" id="large" name="size">
-                                        <label for="large" class="form__radio-label">
-                                            <span class="form__radio-button"></span>Large tour group</label>
+                                        <input type="radio" class="form__radio-input" id="spring" name="size">
+                                        <label for="spring" class="form__radio-label">
+                                            <span class="form__radio-button"></span>Spring Clean</label>
+                                    </div>
+
+                                    <div class="form__radio-group">
+                                        <input type="radio" class="form__radio-input" id="bond" name="size">
+                                        <label for="bond" class="form__radio-label">
+                                            <span class="form__radio-button"></span>Bond Clean</label>
                                     </div>
                                 </div>
 
