--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
         <!-- <link rel="stylesheet" href="css/icon-font.css"> -->
         <link rel="stylesheet" href="css/style.css">
-        <link rel="shortcut icon" type="image/png" href="img/favicon.png">
+        <link rel="shortcut icon" type="image/png" href="img/logo.svg">
         
         <title>NAME</title>
     </head>
@@ -34,7 +34,7 @@
 
         <header class="header">
             <div class="header__logo-box">
-                <img src="img/logo-white.png" alt="Logo" class="header__logo">
+                <img src="img/logo.svg" alt="Logo" class="header__logo">
             </div>
 
             <div class="header__text-box">
@@ -268,7 +268,7 @@
                         <div class="story__text">
                             <h3 class="heading-tertiary u-margin-bottom-small">They know what they are doing</h3>
                             <p>
-                                "They have done a fantastic job. Thank you so much for your help and professionalism."
+                                "They have done a fantastic job. Thank you so much for your help and professionalism." <br><br>
                             </p>
                         </div>
                     </div>
@@ -336,8 +336,8 @@
             <div class="footer__logo-box">
 
                 <picture class="footer__logo">
-                    <source srcset="img/logo-green-small-1x.png 1x, img/logo-green-small-2x.png 2x" media="(max-width: 37.5em)">
-                    <img srcset="img/logo-green-1x.png 1x, img/logo-green-2x.png 2x" alt="Full logo" class="footer__logo" src="img/logo-green-2x.png">
+                    <!-- <source srcset="img/logo-green-small-1x.png 1x, img/logo-green-small-2x.png 2x" media="(max-width: 37.5em)"> -->
+                    <img alt="Full logo" class="footer__logo" src="img/logo.svg">
                 </picture>
                 
             </div>
@@ -365,7 +365,7 @@
             <div class="popup__content">
                 <div class="popup__left">
                     <img src="img/tap.jpg" alt="Tour photo" class="popup__img">
-                    <img src="img/vacuum.png" alt="Tour photo" class="popup__img">
+                    <img src="img/book.jpg" alt="Tour photo" class="popup__img">
                 </div>
                 <div class="popup__right">
                     <a href="#section-tours" class="popup__close">&times;</a>
