img and responsive updates

--- a/index.html
+++ b/index.html
@@ -364,8 +364,8 @@
         <div class="popup" id="popup">
             <div class="popup__content">
                 <div class="popup__left">
-                    <img src="img/tap.jpg" alt="Tour photo" class="popup__img">
-                    <img src="img/book.jpg" alt="Tour photo" class="popup__img">
+                    <img src="img/tap-small.jpg" alt="Tour photo" class="popup__img">
+                    <img src="img/book-small.jpg" alt="Tour photo" class="popup__img">
                 </div>
                 <div class="popup__right">
                     <a href="#section-tours" class="popup__close">&times;</a>
@@ -374,7 +374,7 @@
                     <p class="popup__text">
                         Please make sure you can meet the cleaners at least for a few minutes on the service day before the commencement of the service to go through your expectations, agree on a more precise time/cost or on what can be achieved within the allocated time, and organise payment.
                     </p>
-                    <a href="#booking" class="btn btn--green">Book Now</a>
+                    <a href="#booking" class="btn btn--green book_close">Book Now</a>
                 </div>
             </div>
         </div>
@@ -448,5 +448,6 @@
             </div>
         </section>
         -->
+        <script src="app.js"></script>
     </body>
 </html>
