--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <span class="heading-primary--sub">Eco Friendly Cleaning</span>   
                 </h1>
 
-                <a href="#section-tours" class="btn btn--white btn--animated">Discover our Services</a>
+                <a href="#section-tours" class="btn btn--white btn--animated">Our Services</a>
             </div>
         </header>
 
@@ -93,7 +93,7 @@
                         <div class="feature-box">
                             <i class="feature-box__icon icon-eco"></i>
                             <h3 class="heading-tertiary u-margin-bottom-small">Eco Friendly</h3>
-                            <p class="feature-box__text">Our teams only use select Eco Friendly Products, to make sure your home is clean and healthy.</p>
+                            <p class="feature-box__text">Our teams only use selected Eco Friendly Products, ensuring a clean and healthy home.</p>
                         </div>
                     </div>
 
@@ -109,7 +109,7 @@
                         <div class="feature-box">
                             <i class="feature-box__icon icon-secure"></i>
                             <h3 class="heading-tertiary u-margin-bottom-small">Secure</h3>
-                            <p class="feature-box__text">Every team mandatorily has both police check and insurance, in order to keep your peace of mind.</p>
+                            <p class="feature-box__text">Every member mandatorily has police check and insurance, in order to keep your peace of mind.</p>
                         </div>
                     </div>
 
@@ -346,7 +346,20 @@
                     <div class="footer__navigation">
                         <ul class="footer_list">
                             <li class="footer__item"><a href="#" class="footer__link">Company</a></li>
+                            <li class="footer__item">
+                                <p class="footer_company" id="company">
+                                    We're a family business, situaded in Nundah. We have been operating since 2016, always focusing on the customer trying to treat every home as if it was ours.
+                                </p>
+                            </li>
+                        </ul>
+                        <ul class="footer_list">
                             <li class="footer__item"><a href="#" class="footer__link">Contact Us</a></li>
+                            <li class="footer__item">
+                                <div class="footer_contact">
+                                    <p>Phone: 045 038 1573</p>
+                                    <p>Email: ilmo.ott@hotmail.com</p>
+                                </div>
+                            </li>
                             <!-- <li class="footer__item"><a href="#" class="footer__link">Carrers</a></li>
                             <li class="footer__item"><a href="#" class="footer__link">Privacy Policy</a></li>
                             <li class="footer__item"><a href="#" class="footer__link">Terms</a></li> -->
