name and logo update

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 
         <!-- <link rel="stylesheet" href="css/icon-font.css"> -->
         <link rel="stylesheet" href="css/style.css">
-        <link rel="shortcut icon" type="image/png" href="img/logo.svg">
+        <link rel="shortcut icon" type="image/svg" href="img/logo.svg">
         
-        <title>NAME</title>
+        <title>Make It Clean</title>
     </head>
     <body>
 
@@ -35,12 +35,13 @@
         <header class="header">
             <div class="header__logo-box">
                 <img src="img/logo.svg" alt="Logo" class="header__logo">
+                <h3 class="heading-primary">Make It Clean</h3>
             </div>
 
             <div class="header__text-box">
                 <h1 class="heading-primary">
-                    <span class="heading-primary--main">NAME</span>
-                    <span class="heading-primary--sub">Eco Friendly Cleaning</span>   
+                    <span class="heading-primary--main">Make it Clean</span>
+                    <span class="heading-primary--sub">Eco Friendly House Services</span>   
                 </h1>
 
                 <a href="#section-tours" class="btn btn--white btn--animated">Our Services</a>
@@ -339,6 +340,7 @@
                 <picture class="footer__logo">
                     <!-- <source srcset="img/logo-green-small-1x.png 1x, img/logo-green-small-2x.png 2x" media="(max-width: 37.5em)"> -->
                     <img alt="Full logo" class="footer__logo" src="img/logo.svg">
+                    <h3 class="heading-primary">makeitclean.com.au</h3>
                 </picture>
                 
             </div>
