--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
                                 <div class="footer_contact">
                                     <p>Address: 1/66 Amelia St, Nundah, Queensland, 4012</p>
                                     <p>Phone: 045 038 1573</p>
-                                    <p>Email: ilmo.ott@hotmail.com</p>
+                                    <p>Email: contact@makeitclean.com.au</p>
                                 </div>
                             </li>
                             <!-- <li class="footer__item"><a href="#" class="footer__link">Carrers</a></li>
