--- a/public/index.html
+++ b/public/index.html
@@ -309,15 +309,15 @@
                                 </div>
 
                                 <div class="form__group">
-                                    <input type="text" id="name" class="form__input" placeholder="Full Name" name="name" required>
+                                    <input type="text" id="name" class="form__input" placeholder="Full Name" name="name" required></input>
                                     <label for="name" class="form__label">Full Name</label>
                                 </div>
                                 <div class="form__group">
-                                    <input type="text" id="email" class="form__input" placeholder="Email address" name="email" required>
+                                    <input type="text" id="email" class="form__input" placeholder="Email address" name="email" required></input>
                                     <label for="email" class="form__label">Email address</label>
                                 </div>
                                 <div class="form__group">
-                                    <input type="text" id="text" class="form__input" name="description" placeholder="Write something..">
+                                    <input type="text" id="text" class="form__input" name="description" placeholder="Write something.."></input>
                                 </div>
 
                                 
@@ -325,7 +325,7 @@
                                 
 
                                 <div class="form__group">
-                                    <input type="submit" class="btn btn--green u-margin-bottom-medium" value="Send &rarr;">
+                                    <input type="submit" class="btn btn--green u-margin-bottom-medium" value="Send &rarr;"></input>
                                 </div>
 
                             </form>
